adding 3 section on entomof
- trixogram (main template)
- zlato
- gabrobrakon

--- a/entomof.html
+++ b/entomof.html
@@ -281,9 +281,9 @@
                 <div class="swiper-pagination"></div>
             </div>
 
-            <div class="advantage-items flex flex-wrap sm:hidden">
+            <div class="advantage-items flex flex-wrap md:justify-center ss:hidden">
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/entomofagi/adv-f1.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Доступная цена</h5>
@@ -292,7 +292,7 @@
                         обработку растений.</p>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/entomofagi/adv-f2.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Экономия</h5>
@@ -301,7 +301,7 @@
                         габробракону по сравнению с трационными методами обработки</p>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/entomofagi/adv-f3.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Эффективность</h5>
@@ -310,7 +310,7 @@
                         результате обработки с/х культур более чем на 90%.</p>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/entomofagi/adv-f4.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Оперативность</h5>
@@ -319,7 +319,7 @@
                         обрабатывает до 100 гектаров.</p>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/entomofagi/adv-f5.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Широкий спектр действия</h5>
@@ -328,7 +328,7 @@
                         поколений вредителей.</p>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/entomofagi/adv-f6.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Равномерное распределение</h5>
@@ -432,13 +432,15 @@
                 <h1>Эффективная защита</h1>
                 <h4>Трихограмма</h4>
             </div>
-            <p class="pr-[260px] md:pr-0 text-lg md:text-base sm:text-sm">Трихограмма — мелкое насекомое, которое будучи
+            <p class="pr-[260px] md:pr-0 text-lg md:text-base sm:text-sm my-7">Трихограмма — мелкое насекомое, которое
+                будучи
                 личинкой, питается
                 яйцами паразитов. Современные комплексы БПЛА (дроны) могут использоваться не только для сбора
                 информации, но и для высокоэффективной и экономичной борьбы с вредителями урожая с помощью распыления
                 трихограммы. Трихограмму можно вносить для защиты от совок, кукурузного мотылька, лугового мотылька и
                 других чешуекрылых вредителей. Она паразитирует на яйцах более 70 видов вредителей.</p>
 
+            <div class="trixo-bg"></div>
             <div class="trixogram-box relative flex md:flex-col md:justify-center mt-[70px] md:mt-[219px]">
                 <div class="trixo-img">
                     <img src="img/entomofagi/trixogram-img.png" alt="trixo-img">
@@ -489,6 +491,136 @@
         </div>
     </section>
 
+
+    <!-- The template and codes for the "TRIXOGRAM" section were used to create the Zlato section-->
+
+    <section class="zlato  my-[90px] md:my-12">
+        <div class="container">
+            <div class="primary-title">
+                <h1>Премениние златоглазки</h1>
+                <h4>Златоглазка</h4>
+            </div>
+            <p class="pr-[260px] md:pr-0 text-lg md:text-base sm:text-sm my-7">Каждая личинка златоглазки за жизнь
+                способна уничтожить до 400 особей тли, более 2000 паутинных клещей, порядка 300 яиц колорадского жука,
+                так же златоглазка пожирает гусениц первого возраста стеблевого мотылька, моли.</p>
+            <div class="zlato-bg"></div>
+            <div class="zlato-box relative flex md:flex-col md:justify-center mt-[70px] md:mt-[219px]">
+                <div class="zlato-item flex flex-col justify-start md:mt-[auto]">
+                    <div class="trixo-text text-lg md:text-base max-w-[620px] md:max-w-[auto]">
+                        <p>При своевременном внесении и соблюдении всех технологических процессов при производстве и
+                            транспортировке, златоглазка эффективно защищает растение от вредителей и повышает
+                            урожайность.</p> <br>
+                        <p>Златоглазка уничтожает 76 видов вредителей и 11 видов клещей. Наиболее эффективна
+                            в борьбе с очагами заражения тлей, к лещами, стеблевым мотыльком.</p> <br>
+                        <p>Вносится златоглазка с помощью дрона, дозировка составляет 1000 яиц на один гектар.
+                            За 6 0минут полета дрон со специальным дозатором обрабатывает до 100 гектаров. Эффективность
+                            комплексной защиты растений с помощью
+                            энтомофагов достигает 90%.</p> <br>
+                    </div>
+                    <div class="trixo-inner-item flex flex-col max-w-[450px]">
+                        <div class="flex items-center mb-5">
+                            <div><img src="img/entomofagi/trixogram-icon.png" alt="trixo-icon"></div>
+                            <h5 class="ml-5">Златоглазка эффективна против таких вредителей:</h5>
+                        </div>
+                        <div class="done-box flex flex-wrap ">
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Совки</p>
+                            </div>
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Мотыльки</p>
+                            </div>
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Плодожорки</p>
+                            </div>
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Огневки</p>
+                            </div>
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Листовертки </p>
+                            </div>
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Тля и клещи </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="zlato-img">
+                    <img src="img/entomofagi/zlato-img.jpg" alt="zlato-img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- The template and codes for the "TRIXOGRAM" section were used to create the Gabrobrakon section-->
+
+    <section class="gabrobrakon  my-[90px] md:my-12">
+        <div class="container">
+            <div class="primary-title">
+                <h1>Эффективная защита</h1>
+                <h4>Трихограмма</h4>
+            </div>
+            <p class="pr-[260px] md:pr-0 text-lg md:text-base sm:text-sm my-7">Габробракон — это насекомое способно
+                защитить поля от более 60 видов вредителей, включая самых опасных для посевов мотыльков, плодожорок и
+                огневок. Особенно
+                эффективно габробракон работает на злаковых культурах, сое, плодовых деревьях и виноградниках.
+            </p>
+
+            <div class="gabro-bg"></div>
+            <div class="trixogram-box relative flex md:flex-col md:justify-center mt-[70px] md:mt-[219px]">
+                <div class="trixo-img">
+                    <img src="img/entomofagi/gabro-img.png" alt="gabro-img">
+                </div>
+                <div class="trixogram-item flex flex-col justify-end md:mt-[auto]">
+                    <div class="trixo-text text-lg md:text-base max-w-[620px] md:max-w-[auto]">
+                        <p>Данный вид наездников паразитирует на гусеницах совок, стеблевого мотылька, карадрины,
+                            листоверток и различных чешуекрылых, поэтому исполь зование габробракона в нашей стране
+                            весьма целесообразно и перспективно.</p> <br>
+                        <p>Габробракон высокопродуктивен: достаточно 1000 взрослых особей энтомофага, чтобы защитить от
+                            потерь урожая 1 ГА земель.</p> <br>
+                        <p>За 60 минут полета дрон со специальным дозатором обрабатывает до 100 гектаров. Эффективность
+                            комплексной защиты растений с помощью
+                            энтомофагов достигает 90%*</p> <br>
+                    </div>
+                    <div class="trixo-inner-item flex flex-col max-w-[450px]">
+                        <div class="flex items-center mb-5">
+                            <div><img src="img/entomofagi/trixogram-icon.png" alt="trixo-icon"></div>
+                            <h5 class="ml-5">Трихограмма эффективна против таких вредителей: </h5>
+                        </div>
+                        <div class="done-box flex flex-wrap ">
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Совки</p>
+                            </div>
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Мотыльки</p>
+                            </div>
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Плодожорки</p>
+                            </div>
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Огневки</p>
+                            </div>
+                            <div class="done-items flex basis-1/3 mb-6">
+                                <img src="img/entomofagi/ptichka.svg" alt="ptichka">
+                                <p class="ml-4">Листовертки </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
