adding posledniy section :)

--- a/entomof.html
+++ b/entomof.html
@@ -626,8 +626,56 @@
 
 
 
+    <section class="support mt-[150px] mb-[90px]">
+        <div class="container">
+            <div class="support-box flex items-center">
+                <div class="supp-item">
+                    <div class="primary-title support">
+                        <h1>Напишите нам</h1>
+                        <h4>Нужна помошь?</h4>
+                    </div>
+                    <p
+                        class="text-2xl md:text-lg ss:text-base leading-40 md:leading-[31px] ss:leading-[27px] -mt-8 max-w-[534px]">
+                        Заполните
+                        форму и мы за 5 минут подскажем вам лучшие способы защиты вашего урожая</p>
+                    <form class="flex md:flex-wrap mt-10">
+                        <label for="name" class="block mr-5 md:mb-3">
+                            <input type="text"
+                                class="bg-none mx-2 px-3 pl-4 pr-8 border-y-0 border-t-0 border-b-2 border-borderform bg-inherit focus:outline-none text-lg"
+                                placeholder="Ваше имя" />
+                        </label>
+                        <label for="phone" class="block mr-5 md:mb-3">
+                            <input type="tel"
+                                class="bg-none mx-2 px-3 pl-4 pr-8 border-y-0 border-t-0 border-b-2 border-borderform bg-inherit focus:outline-none text-lg"
+                                placeholder="Ваш телефон" />
+                        </label>
+                        <label for="e-mail" class="block md:mb-3">
+                            <input type="email"
+                                class="bg-none mx-2 px-3 pl-4 pr-8 border-y-0 border-t-0 border-b-2 border-borderform bg-inherit focus:outline-none text-lg"
+                                placeholder="Ваш Email" />
+                        </label>
+                    </form>
+                    <p class="text-sm leading-[16px] mt-5 ss:mt-3">Политика конфидициальности</p>
+                </div>
+                <div class="supp-item flex flex-col items-center">
+                    <div class="supp-drone relative bottom-[90px] md:bottom-[50px]"><img
+                            src="img/entomofagi/support_drone.png" class="w-full" alt="drone">
+                    </div>
+                    <div
+                        class="supp-btn cursor-pointer border flex justify-end px-12 md:px-[21px] ss:px-20 pt-3 md:pt-[5px] ss:pt-[10px] pb-[18px] md:pb-2 ss:mb-[14px] text-2xl sm:text-[17px] leading-4 sm:leading-[1.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">
+                        Отправить
+                    </div>
+                </div>
+            </div>
+            <div class="supp-bg"></div>
+        </div>
+    </section>
 
-    <footer class="bg-bgfooter pt-5 pb-3 md:px-7 sm:border-t-2 sm:border-lightgreen">
+
+
+
+
+    <footer class="bg-bgfooter pt-:px-7 sm:border-t-2 sm:border-lightgreen">
         <div class="container">
             <div class="flex sm:flex-col justify-between sm:justify-center items-center">
                 <div class="flex items-center text-white sm:flex-col sm:justify-center">
