--- a/entomof.html
+++ b/entomof.html
@@ -19,10 +19,10 @@
 
     <div class="header">
         <div class="container">
-            <div class="header-items flex justify-between items-center py-2 sm:py-[3px] md:px-[30px] sm:px-0">
+            <div class="header-items flex justify-between items-center py-2 sm:py-[3px] md:px-[30px] ss:px-0">
                 <div class="header-item flex items-center text-white">
                     <div class="img-logo mr-5 md:mr-4"><img src="img/main/logo.png" alt="logo"></div>
-                    <div class="phone-number sm:hidden icon_phone cursor-pointer md:mr-2">+7861 21791 18</div>
+                    <div class="phone-number ss:hidden icon_phone cursor-pointer md:mr-2">+7861 21791 18</div>
                 </div>
                 <div class="header-item flex items-center text-white">
                     <div class="icons flex">
@@ -32,15 +32,15 @@
                     </div>
                     <div class="language flex text-2xl font-normal md:text-xl">
                         <p
-                            class="ml-[70px] cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-8 sm:ml-3 sm:text-[15px]">
+                            class="ml-[70px] cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-8 ss:ml-4 sm:ml-3 sm:text-[15px]">
                             EN
                         </p>
                         <p
-                            class="ml-5 cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-[19px] sm:ml-3 sm:text-[15px]">
+                            class="ml-5 cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-[19px] ss:ml-4 sm:ml-3 sm:text-[15px]">
                             RU
                         </p>
                     </div>
-                    <div class="h-ends flex ml-12 items-center md:ml-9 sm:ml-3 sm:mt-0">
+                    <div class="h-ends flex ml-12 items-center md:ml-9 ss:ml-5 sm:ml-3 sm:mt-0">
                         <div class="icon icon_shoppingcart"></div>
                         <button class="icon icon_menu ml-5 relative sm:ml-3">
                             <div
@@ -85,21 +85,21 @@
             </div>
         </div>
     </div>
-    </div>
+
 
 
     <div class="main-entomof">
         <div class="container">
             <div class="">
                 <div
-                    class="main-title pt-28 sm:pt-20 text-6xl text-white md:text-3xl sm:text-[28px] max-w-[480px] md:max-w-[338px] sm:max-w-[270px] md:pt-28">
+                    class="main-title pt-28 ss:pt-24 sm:pt-20 text-6xl text-white md:text-3xl sm:text-[28px] max-w-[480px] md:max-w-[338px] sm:max-w-[270px] md:pt-28">
                     Высокоэффективные Энтомофаги</div>
                 <div
                     class="max-w-[460px] md:max-w-[323px] sm:max-w-[304px] text-2xl md:text-lg sm:text-base leading-10 md:leading-8 mt-10 md:mt-6 sm:mt-5">
                     Внесение энтофагов при помощи БПЛА увеличивает эффективность защиты растений до 90%
                 </div>
                 <div
-                    class="ento-box max-w-[720px] md:max-w-[563px] md:relative md:top-8 mt-16 md:mt-9 sm:mt-1 flex flex-wrap text-white">
+                    class="ento-box max-w-[720px] md:max-w-[563px] md:relative md:top-8 mt-16 md:mt-9 ss:mt-1 ss:mb-7 flex flex-wrap text-white">
                     <div class="ento-item flex basis-[33%] md:basis-[34%] sm:basis-[48%] items-center mb-4">
                         <div class="block mr-3">
                             <img class="md:w-8 md:h-8" src="img/entomofagi/main-f1.png" alt="">
@@ -626,9 +626,9 @@
 
 
 
-    <section class="support mt-[150px] mb-[90px]">
+    <section class="support mt-[150px] ss:mt-[50px] mb-[90px] ss:mb-[20px]">
         <div class="container">
-            <div class="support-box flex items-center">
+            <div class="support-box flex items-center ss:flex-col ">
                 <div class="supp-item">
                     <div class="primary-title support">
                         <h1>Напишите нам</h1>
@@ -641,28 +641,28 @@
                     <form class="flex md:flex-wrap mt-10">
                         <label for="name" class="block mr-5 md:mb-3">
                             <input type="text"
-                                class="bg-none mx-2 px-3 pl-4 pr-8 border-y-0 border-t-0 border-b-2 border-borderform bg-inherit focus:outline-none text-lg"
+                                class="bg-none mx-2 ss:mx-0 px-3 pl-4 pr-8 ss:pr-28 border-y-0 border-t-0 border-b-2 border-borderform bg-inherit focus:outline-none text-lg"
                                 placeholder="Ваше имя" />
                         </label>
                         <label for="phone" class="block mr-5 md:mb-3">
                             <input type="tel"
-                                class="bg-none mx-2 px-3 pl-4 pr-8 border-y-0 border-t-0 border-b-2 border-borderform bg-inherit focus:outline-none text-lg"
+                                class="bg-none mx-2 ss:mx-0 px-3 pl-4 pr-8 ss:pr-28 border-y-0 border-t-0 border-b-2 border-borderform bg-inherit focus:outline-none text-lg"
                                 placeholder="Ваш телефон" />
                         </label>
                         <label for="e-mail" class="block md:mb-3">
                             <input type="email"
-                                class="bg-none mx-2 px-3 pl-4 pr-8 border-y-0 border-t-0 border-b-2 border-borderform bg-inherit focus:outline-none text-lg"
+                                class="bg-none mx-2 ss:mx-0 px-3 pl-4 pr-8 ss:pr-28 border-y-0 border-t-0 border-b-2 border-borderform bg-inherit focus:outline-none text-lg"
                                 placeholder="Ваш Email" />
                         </label>
                     </form>
                     <p class="text-sm leading-[16px] mt-5 ss:mt-3">Политика конфидициальности</p>
                 </div>
                 <div class="supp-item flex flex-col items-center">
-                    <div class="supp-drone relative bottom-[90px] md:bottom-[50px]"><img
+                    <div class="supp-drone relative bottom-[90px] md:bottom-[50px] ss:hidden"><img
                             src="img/entomofagi/support_drone.png" class="w-full" alt="drone">
                     </div>
                     <div
-                        class="supp-btn cursor-pointer border flex justify-end px-12 md:px-[21px] ss:px-20 pt-3 md:pt-[5px] ss:pt-[10px] pb-[18px] md:pb-2 ss:mb-[14px] text-2xl sm:text-[17px] leading-4 sm:leading-[1.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">
+                        class="supp-btn cursor-pointer border flex justify-end px-12 md:px-[21px] ss:px-20 pt-3 md:pt-[5px] ss:pt-[10px] pb-[18px] md:pb-2 ss:mb-[14px] text-2xl sm:text-[17px] leading-4 md:leading-[1.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">
                         Отправить
                     </div>
                 </div>
@@ -675,26 +675,26 @@
 
 
 
-    <footer class="bg-bgfooter pt-:px-7 sm:border-t-2 sm:border-lightgreen">
+    <footer class="bg-bgfooter pt-:px-7 ss:border-t-2 ss:border-lightgreen">
         <div class="container">
-            <div class="flex sm:flex-col justify-between sm:justify-center items-center">
-                <div class="flex items-center text-white sm:flex-col sm:justify-center">
-                    <div class="img-logo sm:hidden mr-5 sm:mr-0 sm:w-28 sm:h-[106px] sm:mt-4"><img
+            <div class="flex ss:flex-col justify-between ss:justify-center items-center">
+                <div class="flex items-center text-white ss:flex-col ss:justify-center">
+                    <div class="img-logo ss:hidden mr-5 ss:mr-0 ss:w-28 ss:h-[106px] ss:mt-4"><img
                             src="img/main/logo.png" alt="logo"></div>
-                    <div class="hidden sm:block sm:mr-0 sm:w-28 sm:h-[106px] sm:mt-4"><img
+                    <div class="hidden ss:block ss:mr-0 ss:w-28 ss:h-[106px] sm:mt-4"><img
                             src="img/main/media360/logo.png" alt="logo"></div>
-                    <div class="phone-number icon_phone cursor-pointer sm:text-lg sm:mb-4 sm:mt-2">+7861 21791 18</div>
+                    <div class="phone-number icon_phone cursor-pointer ss:text-lg ss:mb-4 ss:mt-2">+7861 21791 18</div>
                 </div>
-                <div class="icons flex sm:flex-col sm:justify-center items-center sm:mr-3">
-                    <p class="text-lg leading-5 sm:mb-3 sm:ml-3">Подписывайтесь на наши соц. сети: </p>
-                    <div class="icons sm:flex justify-center hidden">
-                        <div class="icon footer icon_vk text-white sm:text-4xl"></div>
-                        <div class="icon footer icon_instagram text-white sm:text-4xl"></div>
-                        <div class="icon footer icon_tiktok text-white sm:text-4xl sm:mb-8"></div>
+                <div class="icons flex ss:flex-col ss:justify-center items-center ss:mr-3">
+                    <p class="text-lg leading-5 ss:mb-3 ss:ml-3">Подписывайтесь на наши соц. сети: </p>
+                    <div class="icons ss:flex justify-center hidden">
+                        <div class="icon footer icon_vk text-white ss:text-4xl"></div>
+                        <div class="icon footer icon_instagram text-white ss:text-4xl"></div>
+                        <div class="icon footer icon_tiktok text-white ss:text-4xl ss:mb-8"></div>
                     </div>
-                    <div class="icon icon_vk text-white sm:hidden"></div>
-                    <div class="icon icon_instagram text-white sm:hidden"></div>
-                    <div class="icon icon_tiktok text-white sm:hidden"></div>
+                    <div class="icon icon_vk text-white ss:hidden"></div>
+                    <div class="icon icon_instagram text-white ss:hidden"></div>
+                    <div class="icon icon_tiktok text-white ss:hidden"></div>
                 </div>
             </div>
         </div>
