--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
     <div class="header">
         <div class="container">
-            <div class="header-items flex justify-between items-center py-2 sm:py-[3px] md:px-[30px] sm:px-0">
+            <div class="header-items flex justify-between items-center py-2 sm:py-[3px] md:px-[30px] ss:px-0">
                 <div class="header-item flex items-center text-white">
                     <div class="img-logo mr-5 md:mr-4"><img src="img/main/logo.png" alt="logo"></div>
-                    <div class="phone-number sm:hidden icon_phone cursor-pointer md:mr-2">+7861 21791 18</div>
+                    <div class="phone-number ss:hidden icon_phone cursor-pointer md:mr-2">+7861 21791 18</div>
                 </div>
                 <div class="header-item flex items-center text-white">
                     <div class="icons flex">
@@ -33,21 +33,21 @@
                     </div>
                     <div class="language flex text-2xl font-normal md:text-xl">
                         <p
-                            class="ml-[70px] cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-8 sm:ml-3 sm:text-[15px]">
+                            class="ml-[70px] cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-8 ss:ml-4 sm:ml-3 sm:text-[15px]">
                             EN
                         </p>
                         <p
-                            class="ml-5 cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-[19px] sm:ml-3 sm:text-[15px]">
+                            class="ml-5 cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-[19px] ss:ml-4 sm:ml-3 sm:text-[15px]">
                             RU
                         </p>
                     </div>
-                    <div class="h-ends flex ml-12 items-center md:ml-9 sm:ml-3 sm:mt-0">
+                    <div class="h-ends flex ml-12 items-center md:ml-9 ss:ml-5 sm:ml-3 sm:mt-0">
                         <div class="icon icon_shoppingcart"></div>
                         <button class="icon icon_menu ml-5 relative sm:ml-3">
                             <div
                                 class="navbar-menu bg-[#181818F2] pt-7 sm:pt-2 pb-11 md:pb-8 sm:pb-3 pr-9 sm:pr-1 pl-6 right-4 sm:right-[0.05rem] w-[280px] sm:w-[170px]">
                                 <ul class="overlay">
-                                    <li class="overlay-m-icons icon_home text-left"><a href="#"
+                                    <li class="overlay-m-icons icon_home text-left"><a href="./index.html"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Главная</a>
                                     </li>
                                     <li class="overlay-m-icons icon_spider text-left"><a href="./entomof.html"
@@ -663,26 +663,26 @@
 
 
 
-    <footer class="bg-bgfooter pt-5 pb-3 md:px-7 sm:border-t-2 sm:border-lightgreen">
+    <footer class="bg-bgfooter pt-:px-7 ss:border-t-2 ss:border-lightgreen">
         <div class="container">
-            <div class="flex sm:flex-col justify-between sm:justify-center items-center">
-                <div class="flex items-center text-white sm:flex-col sm:justify-center">
-                    <div class="img-logo sm:hidden mr-5 sm:mr-0 sm:w-28 sm:h-[106px] sm:mt-4"><img
+            <div class="flex ss:flex-col justify-between ss:justify-center items-center">
+                <div class="flex items-center text-white ss:flex-col ss:justify-center">
+                    <div class="img-logo ss:hidden mr-5 ss:mr-0 ss:w-28 ss:h-[106px] ss:mt-4"><img
                             src="img/main/logo.png" alt="logo"></div>
-                    <div class="hidden sm:block sm:mr-0 sm:w-28 sm:h-[106px] sm:mt-4"><img
+                    <div class="hidden ss:block ss:mr-0 ss:w-28 ss:h-[106px] sm:mt-4"><img
                             src="img/main/media360/logo.png" alt="logo"></div>
-                    <div class="phone-number icon_phone cursor-pointer sm:text-lg sm:mb-4 sm:mt-2">+7861 21791 18</div>
+                    <div class="phone-number icon_phone cursor-pointer ss:text-lg ss:mb-4 ss:mt-2">+7861 21791 18</div>
                 </div>
-                <div class="icons flex sm:flex-col sm:justify-center items-center sm:mr-3">
-                    <p class="text-lg leading-5 sm:mb-3 sm:ml-3">Подписывайтесь на наши соц. сети: </p>
-                    <div class="icons sm:flex justify-center hidden">
-                        <div class="icon footer icon_vk text-white sm:text-4xl"></div>
-                        <div class="icon footer icon_instagram text-white sm:text-4xl"></div>
-                        <div class="icon footer icon_tiktok text-white sm:text-4xl sm:mb-8"></div>
+                <div class="icons flex ss:flex-col ss:justify-center items-center ss:mr-3">
+                    <p class="text-lg leading-5 ss:mb-3 ss:ml-3">Подписывайтесь на наши соц. сети: </p>
+                    <div class="icons ss:flex justify-center hidden">
+                        <div class="icon footer icon_vk text-white ss:text-4xl"></div>
+                        <div class="icon footer icon_instagram text-white ss:text-4xl"></div>
+                        <div class="icon footer icon_tiktok text-white ss:text-4xl ss:mb-8"></div>
                     </div>
-                    <div class="icon icon_vk text-white sm:hidden"></div>
-                    <div class="icon icon_instagram text-white sm:hidden"></div>
-                    <div class="icon icon_tiktok text-white sm:hidden"></div>
+                    <div class="icon icon_vk text-white ss:hidden"></div>
+                    <div class="icon icon_instagram text-white ss:hidden"></div>
+                    <div class="icon icon_tiktok text-white ss:hidden"></div>
                 </div>
             </div>
         </div>
