changing media query 360 to 420px

--- a/entomof.html
+++ b/entomof.html
@@ -635,7 +635,7 @@
                         <h4>Нужна помошь?</h4>
                     </div>
                     <p
-                        class="text-2xl md:text-lg ss:text-base leading-40 md:leading-[31px] ss:leading-[27px] -mt-8 max-w-[534px]">
+                        class="text-2xl md:text-lg ss:text-base leading-40 md:leading-[31px] ss:leading-[27px] -mt-8 max-w-[534px] sm:mt-4">
                         Заполните
                         форму и мы за 5 минут подскажем вам лучшие способы защиты вашего урожая</p>
                     <form class="flex md:flex-wrap mt-10">
