--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <div class="swiper-pagination"></div>
             </div>
 
-            <div class="advantage-items flex flex-wrap sm:hidden">
+            <div class="advantage-items flex flex-wrap ss:hidden">
                 <div
                     class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
@@ -512,8 +512,8 @@
                 <h4>Регионы присутствия</h4>
             </div>
             <div class="country-box relative flex md:justify-center">
-                <div class="country-item flex md:pt-[640px] sm:pt-[360px]">
-                    <ol class="mr-20 sm:mr-4 font-light text-2xl sm:text-base leading-9 sm:leading-[27px]">
+                <div class="country-item flex md:pt-[640px] ss:pt-[340px] sm:pt-[360px]">
+                    <ol class="mr-20 ss:mr-8 sm:mr-4 font-light text-2xl sm:text-base leading-9 sm:leading-[27px]">
                         <li>1.Московская область</li>
                         <li>2. Ростовская область</li>
                         <li>3. Краснодарский край</li>
@@ -527,7 +527,7 @@
                         <li>11. Волгоградская область</li>
                         <li>12. Астраханская область</li>
                     </ol>
-                    <ol class="mr-20 sm:mr-0 font-light text-2xl sm:text-base leading-9 sm:leading-[27px]">
+                    <ol class="mr-20 ss:mr-8 sm:mr-0 font-light text-2xl sm:text-base leading-9 sm:leading-[27px]">
                         <li>13. Самарская область</li>
                         <li>14. Липецкая область</li>
                         <li>15. Орловская область</li>
@@ -572,7 +572,7 @@
 
 
 
-    <section class="news mt-20 md:mt-12 sm:mt-0 py-10 md:pb-0 md:pt-0 mb-20 md:mb-12 md:px-7 sm:px-0 ">
+    <section class="news mt-20 md:mt-12 sm:mt-0 py-10 md:pb-0 md:pt-0 mb-20 md:mb-12 md:px-7 ss:px-0 ">
         <div class="container">
             <div class="primary-title">
                 <h1>Что у нас нового</h1>
