adding nes section and animation

--- a/entomof.html
+++ b/entomof.html
@@ -283,58 +283,79 @@
 
             <div class="advantage-items flex flex-wrap md:justify-center ss:hidden">
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/entomofagi/adv-f1.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Доступная цена</h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/entomofagi/adv-f1.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Доступная цена</h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">Низкая стоимость по сравнению с расходами на
+                            химическую
+                            обработку растений.</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">Низкая стоимость по сравнению с расходами на химическую
-                        обработку растений.</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/entomofagi/adv-f2.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Экономия</h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/entomofagi/adv-f2.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Экономия</h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">Низкие затраты на внесение трихограмм, златоглазки
+                            и
+                            габробракону по сравнению с трационными методами обработки</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">Низкие затраты на внесение трихограмм, златоглазки и
-                        габробракону по сравнению с трационными методами обработки</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/entomofagi/adv-f3.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Эффективность</h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/entomofagi/adv-f3.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Эффективность</h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">Высокая эффективность, снижение потерь урожайности
+                            в
+                            результате обработки с/х культур более чем на 90%.</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">Высокая эффективность, снижение потерь урожайности в
-                        результате обработки с/х культур более чем на 90%.</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/entomofagi/adv-f4.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Оперативность</h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/entomofagi/adv-f4.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Оперативность</h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">За 6 0 минут полета дрон со специальным дозатором
+                            обрабатывает до 100 гектаров.</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">За 6 0 минут полета дрон со специальным дозатором
-                        обрабатывает до 100 гектаров.</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/entomofagi/adv-f5.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Широкий спектр действия</h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/entomofagi/adv-f5.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Широкий спектр действия</h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">Двукратное внесение позволяет уничтожать несколько
+                            поколений вредителей.</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">Двукратное внесение позволяет уничтожать несколько
-                        поколений вредителей.</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] md:mx-4 text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/entomofagi/adv-f6.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Равномерное распределение</h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/entomofagi/adv-f6png.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Равномерное распределение</h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">Внесение с БПЛА гарантирует внедрение особей
+                            трихограммы, златогласки, габробракрну равномерно на всех участках поля</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">Внесение с БПЛА гарантирует внедрение особей
-                        трихограммы, златогласки, габробракрну равномерно на всех участках поля</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
             </div>
         </div>
