--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
 
 
+
     <section class="advantage mt-8 sm:mt-0">
         <div class="container">
             <div class="primary-title">
@@ -237,69 +238,93 @@
 
             <div class="advantage-items flex flex-wrap ss:hidden">
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/main/f-icon1.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Квалифицированные сотрудники</h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/main/f-icon1.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Квалифицированные сотрудники</h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">Все наши сотрудники имеют многолетний опыт работы в
+                            сфере беспилотной авиации.
+                            Нами было
+                            реализовано множество проектов различной тематики и самой различной сложности.</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">Все наши сотрудники имеют многолетний опыт работы в
-                        сфере беспилотной авиации.
-                        Нами было
-                        реализовано множество проектов различной тематики и самой различной сложности.</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/main/f-icon2.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Высокотехнологичное оборудование </h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/main/f-icon2.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Высокотехнологичное оборудование </h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">Наша компания использует современное оборудование,
+                            которое обеспечивает высокое качество в
+                            выполнении поставленных задач.</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">Наша компания использует современное оборудование,
-                        которое обеспечивает высокое качество в
-                        выполнении поставленных задач.</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/main/f-icon3.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Экономия</h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/main/f-icon3.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Экономия</h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">Использование беспилотных технологий экономит вам
+                            много
+                            времени и денег. За счет отсутствия
+                            технологической колеи сохраняется до 6% урожая. Снижение расхода препаратов до 30%</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">Использование беспилотных технологий экономит вам много
-                        времени и денег. За счет отсутствия
-                        технологической колеи сохраняется до 6% урожая. Снижение расхода препаратов до 30%</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/main/f-icon4.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Оперативность</h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/main/f-icon4.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Оперативность</h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">За рабочую смену наши специалисты способны защитить
+                            более 1000 гектар ваших полей, кустарников и
+                            деревьев.</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">За рабочую смену наши специалисты способны защитить
-                        более 1000 гектар ваших полей, кустарников и
-                        деревьев.</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/main/f-icon5.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Собственное производство </h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/main/f-icon5.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Собственное производство </h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">Мы разрабатываем и производим беспилотные
+                            летательные
+                            аппараты, поэтому знаем все тонкости их
+                            работы и можем настроить их под конкретные задачи и потребности клиентов.</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">Мы разрабатываем и производим беспилотные летательные
-                        аппараты, поэтому знаем все тонкости их
-                        работы и можем настроить их под конкретные задачи и потребности клиентов.</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
-                    <div class="flex items-center mb-6 cursor-pointer">
-                        <img src="img/main/f-icon6.png" alt="">
-                        <h5 class="ml-2 text-[22px] md:text-xl leading-5">Свой сервис</h5>
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    <div class="content z-10 relative">
+                        <div class="flex items-center mb-6 cursor-pointer">
+                            <img src="img/main/f-icon6.png" alt="">
+                            <h5 class="ml-2 text-[22px] md:text-xl leading-5">Свой сервис</h5>
+                        </div>
+                        <p class="text-base text-textflex leading-8">Любой наш аппарат можно сдать на плановое
+                            техническое
+                            обслуживание или же в ремонт в наш
+                            собственный сервис, который гарантирует качество и оперативность выполнения работ.</p>
                     </div>
-                    <p class="text-base text-textflex leading-8">Любой наш аппарат можно сдать на плановое техническое
-                        обслуживание или же в ремонт в наш
-                        собственный сервис, который гарантирует качество и оперативность выполнения работ.</p>
+                    <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
             </div>
         </div>
     </section>
+
+
+
 
 
     <section class="product mt-24 md:mt-16 sm:mt-12 md:mb-16">
@@ -378,49 +403,58 @@
 
 
             <div class="p-box flex justify-between text-white mb-28 md:hidden">
-                <div
-                    class="p-item box-border basis-[32%] text-white bg-bgflex mb-5 rounded-lg hover:scale-105 transition-[0.4s]">
-                    <div class="p-img mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d1.png" alt="Dron1"></div>
-                    <div class="p-info ml-10">
-                        <div class="p-name leading-8 text-3xl mt-7">Агродрон AGR A22</div>
-                        <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
-                            <p>Бренд: <span class="font-light">AGR</span></p>
-                            <p> Модель: <span class="font-light">101-0101</span></p>
+                <div class="p-items">
+                    <div
+                        class="p-item box-border h-[595px] w-[345px] text-white bg-bgflex rounded-lg transition-[0.4s]">
+                        <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d1.png"
+                                alt="Dron1"></div>
+                        <div class="p-info ml-10">
+                            <div class="p-name leading-8 text-3xl mt-7">Агродрон AGR A22</div>
+                            <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
+                                <p>Бренд: <span class="font-light">AGR</span></p>
+                                <p> Модель: <span class="font-light">101-0101</span></p>
+                            </div>
+                            <div class="p-price text-3xl leading-7 mb-12">$15001.27</div>
+                            <button
+                                class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                                в корзину</button>
                         </div>
-                        <div class="p-price text-3xl leading-7 mb-12">$15001.27</div>
-                        <button
-                            class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
-                            в корзину</button>
                     </div>
                 </div>
-                <div
-                    class="p-item box-border basis-[32%] text-white bg-bgflex mb-5 rounded-lg hover:scale-105 transition-[0.4s]">
-                    <div class="p-img mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d2.png" alt="Dron1"></div>
-                    <div class="p-info ml-10">
-                        <div class="p-name leading-8 text-3xl mt-7">Дрон- Картограф STS M8</div>
-                        <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
-                            <p>Бренд: <span class="font-light">STS</span></p>
-                            <p> Модель: <span class="font-light">101-11</span></p>
+                <div class="p-items">
+                    <div
+                        class="p-item box-border h-[595px] w-[345px] text-white bg-bgflex rounded-lg transition-[0.4s]">
+                        <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d2.png"
+                                alt="Dron1"></div>
+                        <div class="p-info ml-10">
+                            <div class="p-name leading-8 text-3xl mt-7">Дрон- Картограф STS M8</div>
+                            <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
+                                <p>Бренд: <span class="font-light">STS</span></p>
+                                <p> Модель: <span class="font-light">101-11</span></p>
+                            </div>
+                            <div class="p-price text-3xl leading-7 mb-12">$18206.30</div>
+                            <button
+                                class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                                в корзину</button>
                         </div>
-                        <div class="p-price text-3xl leading-7 mb-12">$18206.30</div>
-                        <button
-                            class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
-                            в корзину</button>
                     </div>
                 </div>
-                <div
-                    class="p-item box-border basis-[32%] text-white bg-bgflex mb-5 rounded-lg hover:scale-105 transition-[0.4s]">
-                    <div class="p-img mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d3.png" alt="Dron1"></div>
-                    <div class="p-info ml-10">
-                        <div class="p-name leading-8 text-3xl mt-7">Дрон - Картограф STS M1550</div>
-                        <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
-                            <p>Бренд: <span class="font-light">STS</span></p>
-                            <p> Модель: <span class="font-light">100-10</span></p>
+                <div class="p-items">
+                    <div
+                        class="p-item box-border h-[595px] w-[345px] text-white bg-bgflex rounded-lg transition-[0.4s]">
+                        <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d3.png"
+                                alt="Dron1"></div>
+                        <div class="p-info ml-10">
+                            <div class="p-name leading-8 text-3xl mt-7">Дрон - Картограф STS M1550</div>
+                            <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
+                                <p>Бренд: <span class="font-light">STS</span></p>
+                                <p> Модель: <span class="font-light">100-10</span></p>
+                            </div>
+                            <div class="p-price text-3xl leading-7 mb-12">$13802.86</div>
+                            <button
+                                class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                                в корзину</button>
                         </div>
-                        <div class="p-price text-3xl leading-7 mb-12">$13802.86</div>
-                        <button
-                            class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
-                            в корзину</button>
                     </div>
                 </div>
             </div>
