--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
             <div class="advantage-items flex flex-wrap ss:hidden">
                 <div
-                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.5s] relative">
                     <div class="content z-10 relative">
                         <div class="flex items-center mb-6 cursor-pointer">
                             <img src="img/main/f-icon1.png" alt="">
@@ -252,7 +252,7 @@
                     <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.5s] relative">
                     <div class="content z-10 relative">
                         <div class="flex items-center mb-6 cursor-pointer">
                             <img src="img/main/f-icon2.png" alt="">
@@ -265,7 +265,7 @@
                     <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.5s] relative">
                     <div class="content z-10 relative">
                         <div class="flex items-center mb-6 cursor-pointer">
                             <img src="img/main/f-icon3.png" alt="">
@@ -279,7 +279,7 @@
                     <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.5s] relative">
                     <div class="content z-10 relative">
                         <div class="flex items-center mb-6 cursor-pointer">
                             <img src="img/main/f-icon4.png" alt="">
@@ -292,7 +292,7 @@
                     <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.5s] relative">
                     <div class="content z-10 relative">
                         <div class="flex items-center mb-6 cursor-pointer">
                             <img src="img/main/f-icon5.png" alt="">
@@ -306,7 +306,7 @@
                     <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                 </div>
                 <div
-                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.4s] relative">
+                    class="advantage-item h-auto w-[30%] overflow-hidden md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg cursor-pointer transition-[0.5s] relative">
                     <div class="content z-10 relative">
                         <div class="flex items-center mb-6 cursor-pointer">
                             <img src="img/main/f-icon6.png" alt="">
@@ -591,14 +591,14 @@
                 <h4>Партнеры</h4>
             </div>
             <div class="client-box mt-10 flex justify-between items-center md:mx-7">
-                <div class="client-img hover:scale-125 transition-[0.6s] cursor-pointer"><img width="85%"
-                        src="img/main/client1.png" alt=""></div>
-                <div class="client-img hover:scale-125 transition-[0.6s] cursor-pointer"><img width="85%"
-                        src="img/main/client2.png" alt=""></div>
-                <div class="client-img hover:scale-125 transition-[0.6s] cursor-pointer"><img width="85%"
-                        src="img/main/client3.png" alt=""></div>
-                <div class="client-img hover:scale-125 transition-[0.6s] cursor-pointer"><img width="85%"
-                        src="img/main/client4.png" alt=""></div>
+                <div class="client-img transition-[0.6s] cursor-pointer"><img width="85%" src="img/main/client1.png"
+                        alt=""></div>
+                <div class="client-img transition-[0.6s] cursor-pointer"><img width="85%" src="img/main/client2.png"
+                        alt=""></div>
+                <div class="client-img transition-[0.6s] cursor-pointer"><img width="85%" src="img/main/client3.png"
+                        alt=""></div>
+                <div class="client-img transition-[0.6s] cursor-pointer"><img width="85%" src="img/main/client4.png"
+                        alt=""></div>
             </div>
         </div>
     </section>
