commit news file

--- a/entomof.html
+++ b/entomof.html
@@ -62,7 +62,7 @@
                                     <li class="overlay-m-icons icon_catalog text-left"><a href="#"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Каталог
                                             продукции</a></li>
-                                    <li class="overlay-m-icons icon_news text-left"><a href="#"
+                                    <li class="overlay-m-icons icon_news text-left"><a href="./news.html"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Новости</a>
                                     </li>
                                     <li class="overlay-m-icons icon_aboutus text-left"><a href="#"
