adding adama post and changing img size on 420 media query

--- a/news.html
+++ b/news.html
@@ -133,12 +133,12 @@
                     </div>
                     <div class="news-box flex px-14 py-14 my-6 bg-bgflex cursor-pointer hover:bg-black transition-all">
                         <div class="box-item basis-[30%] mr-7 lg:mr-0">
-                            <a href="news_post/terravion.html" class="item-img"><img src="img/news_post/2adama.png"
+                            <a href="news_post/adama.html" class="item-img"><img src="img/news_post/2adama.png"
                                     alt="post-one"></a>
                         </div>
                         <div class="box-item basis-[60%] lg:ml-4 md:basis-[100%] md:ml-0 md:mt-5">
                             <div class="titles flex justify-between mb-8">
-                                <a href="news_post/terravion.html" class="text-[22px] leading-[22px]">Конкурс ADAMA &
+                                <a href="news_post/adama.html" class="text-[22px] leading-[22px]">Конкурс ADAMA &
                                     Growingil's challenge!</a>
                                 <p class="text-base leading-4 font-light">March 23, 2021</p>
                             </div>
@@ -156,7 +156,7 @@
                                 устойчивые и эффективные решения для лучшего будущего в области защиты растений. Нажмите
                                 здесь,
                                 что прочитать подробнее.</p>
-                            <div class="news-more pb-7"><a href="news_post/terravion.html">Читать полностью</a></div>
+                            <div class="news-more pb-7"><a href="news_post/adama.html">Читать полностью</a></div>
                         </div>
                     </div>
                     <div class="news-box flex px-14 py-14 my-6 bg-bgflex cursor-pointer hover:bg-black transition-all">
