--- a/news_post/terravion.html
+++ b/news_post/terravion.html
@@ -51,7 +51,7 @@
                                     <li class="overlay-m-icons icon_spider text-left"><a href="../entomof.html"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Энтомофаги</a>
                                     </li>
-                                    <li class="overlay-m-icons icon_opriskivaniy text-left"><a href="#"
+                                    <li class="overlay-m-icons icon_opriskivaniy text-left"><a href="../news.html"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Опрыскивание</a>
                                     </li>
                                     <li class="overlay-m-icons icon_kartografi text-left"><a href="#"
@@ -88,7 +88,7 @@
     <div class="post-sections-title">
         <div class="container">
             <a href="../index.html" class="text-white cursor-pointer">Главная / </a>
-            <a href="../entomof.html" class="text-white cursor-pointer">Энтомофаги /</a>
+            <a href="../news.html" class="text-white cursor-pointer">Новости /</a>
             <a href="./terravion.html" class="text-lightgreen cursor-pointer">Приобретение TerrAvion</a>
         </div>
     </div>
